[package]
name = "nbchan"
version = "0.1.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Highly optimized non-blocking communication channels"
documentation = "https://docs.rs/nbchan"
homepage = "https://github.com/sile/nbchan"
repository = "https://github.com/sile/nbchan"
readme = "README.md"
categories = ["asynchronous", "concurrency"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/nbchan"}
codecov = {repository = "sile/nbchan"}
